# hello-tree-sitter

./: .gitignore  .mcp.json  CLAUDE.md  README.md  aqua.yaml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: coding_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
code-stats-rs/: Cargo.toml  README.md
code-stats-rs/src/: analyzer.rs  cli.rs  directory.rs  error.rs  formatter.rs  language.rs  lib.rs  main.rs  parser.rs  stats.rs
code-stats-rs/tests/: cli_options.rs  directory_analysis.rs  file_analysis.rs  integration_test.rs  output_formats.rs
code-stats-rs/tests/common/: mod.rs
code-stats-rs/tests/fixtures/: code.txt  component.jsx  component.tsx  module.mjs  python_script  test.go  test.java  test.js  test.py  test.rs  test.ts
code-stats-rs/tests/helpers/: mod.rs
