[package]
name = "code-stats-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "code_stats_rs"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "=3.23.0"
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
